Updated the home page

--- a/JohnTesting/testing.html
+++ b/JohnTesting/testing.html
@@ -30,7 +30,7 @@
 <body>
 
 
-  <div class="tab">
+<div class="tab">
   <button class="tablinks" onclick="openTabs(event, 'professor')">Professor</button>
   <button class="tablinks" onclick="openTabs(event, 'description')">Description</button>
   <button class="tablinks" onclick="openTabs(event, 'syllabus')">Syllabus</button>
@@ -39,10 +39,12 @@
 
   <div id="professor" class="tabcontent">
         <div class='parent'>
-        <label for="file"><img class = "picture" src=     
-         "https://csm.fresnostate.edu/csci/images/facstaff/dhanyu_amarasinghe.png"       
-         class="upload- 
-          icon"></label>
+          <label for="file">
+              <img class = "picture" src=     
+            "https://csm.fresnostate.edu/csci/images/facstaff/dhanyu_amarasinghe.png"       
+            class="upload- 
+              icon">
+          </label>
         </div>
         <h1>Professor's Name</h1>
         <div class = "container" id="imgBox">
