--- a/Database4Classes/index.html
+++ b/Database4Classes/index.html
@@ -5,6 +5,8 @@
     <title>Testing Data</title>
 </head>
 <body>
-    <script src = "functions.js"></script>
+    <script src = "functions.js"> getName(0); </script>
+    <div id="container"></div>
+    <script src = "functions.js"> </script>
 </body>
 </html>
